--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 * {
   box-sizing: border-box;
   /* font-family: 'Roboto Slab', serif; */
-  font-family: 'Lora', serif; 
+/*   font-family: 'Lora', serif;  */
+  font-family: 'Montserrat', sans-serif;
+  color: #333333;
   margin: 0;
   padding: 0;
   text-align: center;
   outline: 1px solid transparent;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+/*   font-smoothing: antialiased */
+/*   -webkit-font-smoothing: antialiased; */
 }
 
 html {
@@ -14,502 +20,451 @@ html {
   scroll-behavior: smooth;
   background-size: cover; 
   width: 100%;
+  height: 100%;
 /*   scroll-snap-type: y mandatory; */
 /*   scroll-snap-type: y proximity; */
 }
 
 body {
-  height: 500vh;
-  width: 100%;
-  pointer-events: none;
-/*   background-color: darkblue; */
-/*   background-color: gray; */
+/*   height: 300%; */
+/*   padding-top: 150vh; */
+/*   overflow-y: hidden; */
+  background-color: #062d3e;
+  position: relative;
 }
 
-.bg-box-shadow {
-  position: fixed;
-  top: 0;
+main {
+/*   position: fixed; */
   height: 100%;
-  width: 100%;
-  box-shadow: inset 300px 300px 500px rgba(255, 255, 255, 1);
-/*   box-shadow: inset 00px 00px 500px rgba(255, 255, 255, .2); */
-  z-index: -2;
-}
-
-h1, h2 {
-/*   font-family: 'Fjalla One', sans-serif; */
-/*   font-size-adjust: 1.3; */
-  letter-spacing: 3px;
-}
-
-
-.bg-boxes {
-  transition: transform 1s cubic-bezier(.19,1,.22,1) 0.0s;
-  height: 1000vh;
-  width: 100vw;
-/*   top: 150vh; */
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column wrap;
-  perspective: 3000px;
-  perspective-origin: 0% 0%;
-  z-index: -3;
-}
-
-.box {
-  height: 18vh;
-  width: 10vw;
-  background-color: rgba(0, 100, 255, 0.3);
-/*   filter: invert(100%); */
-/*   border: 2px solid gray; */
-/*   transform: translate3d(0, 0, 0); */
-/*   position: absolute; */
-}
-
-
-
-
-/*------------------- LANDING ---------------------*/
-.screen-first {
-  position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
-  /* background-color: skyblue; */
-  background-color: black;
-  transition: 1s;
-
-  /* transform: translate3d(-50%, 0, 0); */
-}
-
-.screen-second {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  /* background-color: black; */
-  background-color: skyblue;
-  z-index: 2;
-  transition: 1s;
-  /* transform: translate3d(100%, 0, 0); */
-}
-
-.letter-holders {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  padding-left: 60vw;
-  display: flex;
-  justify-content: space-evenly;
-  /* justify-content: flex-end; */
-  transition: 1s;
-}
-
-.letter {
-  /* height: 50vh; */
-  height: 100vh;
-  width: 5%;
-  color: white;
-  background-color: black;
-  text-transform: uppercase;
-  font-size-adjust: 0.8;
-  line-height: 95vh;
-  text-align: center;
   transition: 0.5s;
-  /* box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 1); */
+  transition-timing-function: cubic-bezier(.23,1,.32,1);
 }
 
 
 
-#name {
-  transition: 0.5s;
-/*   font-size-adjust: 0.5; */
-  background-color: black;
-  border: 2px solid transparent;
+
+/* --------------- HEADER --------------- */
+.name {
+/*   font-family: 'Lora', serif;  */
   color: white;
-  grid-area: name;
-  margin-top: 0;
-  height: 100vh;
-  width: 60vw;
-/*   text-align: left; */
-  padding-top: 30vh;
-  opacity: 1;
-  z-index: 3;
+  background-color: #263941;
+  position: fixed;
+  top: 0;
+  left: 0;
+/*   height: 5vh; */
+  line-height: 4vh;
+  text-align: left;
+  margin: 0;
+  padding: 0.2em;
+/*   margin-left: -5vw; */
+/*   width: 80%; */
+  font-size-adjust: 0.4;
+  font-weight: lighter;
+  z-index: 5;
+/*   background-image: linear-gradient(to bottom, white, transparent); */
 }
 
-.landing-animation#buffer-name-buffer:before, .landing-animation#buffer-name-buffer:after {
-  animation-name: expand;
-  animation-duration: 1s;
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
-}
-
-#buffer-name-buffer:before {
+/* .name:after {
   content: '';
   position: absolute;
-  height: 40vw;
-  width: 40vw;
-  background-color: black;
-  top: 15vw;
-  left: 30vw;
-  clip-path: circle(50% at 50% 50%);
+  top: 0;
+  left: 0;
+  height: 50%;
+  width: 80%;
+  background-color: #263941;
   z-index: -1;
-/*   opacity: 0; */
-}
-
-#buffer-name-buffer:after {
-  content: '';
-  position: absolute;
-  height: 50vw;
-  width: 50vw;
-  background-color: red;
-  top: 10vw;
-  left: 25vw;
-  clip-path: circle(50% at 50% 50%);
-  z-index: -2;
-/*   opacity: 0; */
-}
-
-@keyframes expand {
-  from{transform: scale3d(0, 0, 0); opacity: 1}
-  to{transform: scale3d(3, 3, 3); opacity: 0}
-}
-
-.landing-animation #name {
-/*   font-size-adjust: 3; */
-  text-align: center;
-  animation-name: landing;
-  animation-duration: 1.5s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-  animation-iteration-count: 1;
-  animation-timing-function: cubic-bezier(.9,-0.11,.73,1.07);
-}
-
-/* @keyframes landing {
-  0% {transform: translate3d(0%, -50%, 500px); opacity: 0}
-  50% {transform: translate3d(0%, 0%, 100px)}
-  100% {transform: translate3d(0%, 0, 0px); opacity: 1}
 } */
 
-@keyframes landing {
-  from {color: black}
-  to {color: white}
-}
-
-
-
-section.landing-animation {
-  animation-name: nav-landing;
-  animation-duration: 2.5s;
-  animation-iteration-count: infinite;
-  animation-iteration-count: 1;
-}
-
-@keyframes nav-landing {
-  0% {transform: scale(1)}
-  70% {transform: scale(1)}
-  80% {transform: scale(0.9)}
-  90% {transform: scale(1)}
-  100% {box-shadow: unset}
-}
-  
-
-
-
-
-
-
-
-
-/* --------------------- ABOUT ME ------------------ */
-.about-me-container {
-  width: 98vw;
-  transition: 0.5s;
+.fixed-navbar {
   position: fixed;
-  top: 100vh;
-  perspective: 3000px;
-  perspective-origin: 50% 50%;
-  transform-style: preserve-3d;
-  color: white;
-  display: grid;
-  justify-content: space-between;
-  grid-template-areas: "visual label" "visual content";
-}
-
-.about-me-label {
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+/*   padding-top: 2vh; */
   height: 10vh;
-  width: 58vw;
-  line-height: 10vh;
-  padding-left: 5vw;
-  text-align: center;
-  grid-area: label;
-  z-index: 2;
-  background-color: black;
-/*   border: 2px solid white; */
-  transition: 0.8s;
-/*   transform: translate3d(0, 300%, 0); */
-}
-
-.about-me-content {
-  height: 20vh;
-  width: 58vw;
-  background-color: black;
-/*   border: 2px solid white; */
-  text-align: left;
-  grid-area: content;
-  font-size-adjust: 0.6;
-  line-height: 190%;
-  padding: 1em;
-  padding-left: 4em;
-  padding-right: 4em;
-  z-index: 1;
-  transition: 0.9s;
-/*   transform: translate3d(0, 300%, 0); */
-}
-
-.about-me-visual {
-  position: relative;
-  background-color: black;
-/*   border: 2px solid white; */
-  grid-area: visual;
-  height: 25vh;
-  width: 40vw;
-  transition: 1s;
-/*   transform: translate3d(0, 300%, 0); */
-}
-
-.about-me-visual:before {
-  content: '';
-  position: absolute;
-  height: 100%;
   width: 100%;
-  background-color: black;
-  top: 0vh;
-  left: 0;
-  transition: 0.5s;
+  display: flex;
+  flex-flow: row nowrap;
+/*   justify-content: space-evenly; */
+  align-items: center;
+  background-image: linear-gradient(to top, white, transparent);
 }
 
-.about-me-visual.added:before {
-  top: -31vh;
-}
-
-.about-me-visual:after {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-color: black;
-  top: 0vh;
-  left: 0;
-  transition: 0.5s;
-}
-
-.about-me-visual.added:after {
-  top: -62vh;
-}
-
-
-
-
-
-
-
-/*------------------- PROJECTS ---------------------*/
-.project-containers {
-  position: fixed;
-  top: 200vh;
-  transition: 0.5s;
-  height: 90vh;
-  display: grid;
-  align-content: space-evenly;
-}
-
-.project-one-container, .project-two-container, .project-three-container {
-  background-color: black;
-/*   background-image: linear-gradient(to right, transparent, black, 100%, transparent); */
-  color: white;
-  height: 25vh;
-  width: 40vw;
-  transition: 0.5s;
-/*   opacity: 0; */
-}
-
-
-
-.project-one, .project-two, .project-three {
-
-}
-
-.project-one-container {
-/*   transform: translate3d(0%, -195%, 0); */
-  transform: translate3d(0%, 245%, 0);
-}
-
-.project-one {
-
-}
-
-.project-two-container {
-/*   transform: translate3d(15%, 0%, 0); */
-  transform: translate3d(0%, 130%, 0);
-}
-
-.project-two {
-
-}
-
-.project-three-container {
-/*   transform: translate3d(0%, 100%, 0); */
-  transform: translate3d(0%, 15%, 0);
-}
-
-.project-three {
-
-}
-
-
-
-
-
-.project-heading { 
-
-}
-
-.project-title {
-
-}
-
-.project-details {
-
-}
-
-.project-description {
-
-}
-
-.project-buttons-container {
-  grid-area: buttons;
+.nav-buttons {
   height: 15vh;
+  width: 60%;
+  margin-left: 10%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.5s;
+  transform: translate3d(0, 100%, 0);
+}
+
+.nav-buttons button {
+  border: none;
+  background-color: transparent;
+}
+
+.toggleMe .nav-buttons {
+  transform: translate3d(0, 0%, 0);
+}
+
+.nav-buttons button {
+/*   height: 4vh; */
+/*   width: 10vw; */
+  position: relative;
+}
+
+svg {
+/*   position: absolute;
+  top: 0;
+  left: 0; */
+}
+
+.hamburger {
+  height: 15vw;
+  width: 15vw;
+  margin-left: 5vw;
+  border: 2px solid blue;
+}
+
+.animation-container {
+  height: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
-/*   align-items: center; */
-/*   margin-top: 10vh; */
-/*   width: 90%; */
-  margin-left: -0.5vw;
+  align-items: center;
+  pointer-events: none;
+}
+
+.hamburger-line1, .hamburger-line2, .hamburger-line3 {
+  height: 2px;
+  width: 10vw;
+  background-color: black;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.toggleMe .hamburger-line1 {
+  transform: translate3d(725%, 2000%, 0);
+}
+
+.toggleMe .hamburger-line2 {
+  transform: translate3d(475%, 1350%, 0);
+}
+
+.toggleMe .hamburger-line3 {
+  transform: translate3d(225%, 650%, 0);
+}
+
+
+
+
+
+
+
+
+
+/* ------------- PROJECTS --------------- */
+.projects-container {
+  margin-top: 35vh;
+  height: 100%;
+  width: 100%;
   position: relative;
+/*   perspective: 1000px; */
+/*   perspective-origin: 50% 50%; */
+/*   transform: rotate3d(0, 1, 0, 10deg); */
+  background-color: white;
+/*   border-radius: 15px 15px 0 0; */
 }
 
-.project-buttons {
-  border-radius: 15px;
-  border: unset;
-  color: rgba(0, 0, 0, 0.6);
-  background-color: transparent;
-  cursor: pointer;
-  text-align: left;
-  font-size-adjust: 0.5;
-  font-weight: bold;
-/*   font-family: 'Fjalla One', sans-serif; */
-  height: 5vh;
-  width: max-content;
-  transition: 0.2s;
+.projects-header {
+  font-weight: inherit;
+/*   font-size-adjust: 0.5; */
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  height: 130%;
+  top: -5vh;
+  color: white;
+  pointer-events: none;
 }
 
-.project-buttons:before {
+.projects-header:before {
   content: '';
-  height: 1.3em;
-  width: 2vw;
+  background-color: #aed8e9;
+  position: absolute;
+  top: 100%;
   left: 0;
-  background-color: rgba(33, 150, 243, 1);
-  position: absolute;
-  transform: translate3d(-200%, 0, 0);
-  transition: 0.3s;
-  transition-timing-function: cubic-bezier(.11, .87, .3, .86);
-  clip-path: polygon(47% 5%, 5% 5%, 5% 0%, 95% 0%, 95% 5%, 53% 5%, 53% 95%, 95% 95%, 95% 100%, 5% 100%, 5% 95%, 47% 95%);
-  opacity: 0;
-/*   clip-path: polygon(100% 0, 100% 5%, 5% 5%, 5% 95%, 100% 95%, 100% 100%, 0 100%, 0 0); */
+  width: 100%;
+  height: 1px;
+  z-index: 4;
 }
 
-.project-buttons:after {
+.projects-header:after {
   content: '';
-  height: 1.3em;
-  width: 2vw;
-  right: 70%;
-  background-color: rgba(33, 150, 243, 1);
+  background-color: #aed8e9;
   position: absolute;
-  transform: translate3d(200%, 0, 0);
-  transition: 0.3s;
-  transition-timing-function: cubic-bezier(.11, .87, .3, .86);
-  clip-path: polygon(47% 5%, 5% 5%, 5% 0%, 95% 0%, 95% 5%, 53% 5%, 53% 95%, 95% 95%, 95% 100%, 5% 100%, 5% 95%, 47% 95%);
-  opacity: 0;
-/*   clip-path: polygon(0 5%, 5% 0, 100% 0, 100% 100%, 0 100%, 0 95%, 95% 95%, 95% 5%); */
+  top: 5%;
+  left: 50%;
+  width: 1px;
+  height: 95%;
+  z-index: 4;
 }
 
-.project-buttons:hover {
-  color: black;
+.project-one-container, .project-two-container, .project-three-container {
+/*   position: absolute; */
   position: relative;
-/*   text-decoration: underline overline rgba(33, 150, 243, 1); */
-}
-
-.project-buttons:hover.project-buttons:before {
-  left: unset;
-  right: -10%;
-  transform: translate3d(0, 0, 0);
-  clip-path: polygon(0 5%, 5% 0, 100% 0, 100% 100%, 0 100%, 0 95%, 95% 95%, 95% 5%);
-  opacity: 1;
-}
-
-.project-buttons:hover.project-buttons:after {
-  right: unset;
+  top: 0%;
+  margin-top: 5vh;
   left: 10%;
-  transform: translate3d(-80%, 0, 0);
-  clip-path: polygon(100% 0, 100% 5%, 5% 5%, 5% 95%, 100% 95%, 100% 100%, 0 100%, 0 0);
+  background-color: white;
+  border-radius: 15px;
+/*   border: 2px solid black; */
+  transition: 0.5s;
+  height: 10vh;
+  width: 80%;
+  padding: 2%;
+  padding-top: 35%;
+  z-index: 5;
+  display: flex;
+  flex-flow: column nowrap;
+  perspective: 1000px;
+  perspective-origin: 50% 50%;
+/*   justify-content: space-evenly; */
+}
+
+/* .project-one-container:hover, .project-two-container:hover, .project-three-container:hover {
+  height: 50%;
+} */
+
+.expand.project-one-container {
+  height: 50vh;
+}
+
+.expand.project-two-container {
+  height: 70vh;
+}
+
+.expand.project-three-container {
+  height: 50vh;
+}
+
+.expand .project-content, .expand .project-content, .expand .project-content {
+  transform: scale3d(1, 1, 1);
   opacity: 1;
 }
 
+.expand .project-outline, .expand .project-outline, .expand .project-outline {
+  transform: rotate3d(0, 0, 0, 90deg);
+  opacity: 1;
+}
 
+.project-one-container {
+/*   z-index: 3; */
+/*   top: 0%; */
+/*   left: 25%; */
+}
 
+.project-two-container {
+/*   z-index: 2; */
+/*   top: 15%; */
+/*   left: 35%; */
+/*   transform: translate3d(0, 0, -50px); */
+/*   filter: blur(2px); */
+}
 
+.project-three-container {
+/*   z-index: 1; */
+/*   top: 30%; */
+/*   left: 45%; */
+/*   transform: translate3d(0, 0, -100px); */
+/*   filter: blur(4px); */
+}
 
-
-
-/* --------------- FOOTER -------------------- */
-.contact-section {
-  position: fixed;
-  top: 300vh;
+.project-outline {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border: 2px solid black;
+  transform: rotate3d(1, 1, 0, 90deg);
   transition: 0.5s;
-  height: 100vh;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.project-thumbnail {
+  height: 100px;
+  width: 90%;
+  position: absolute;
+  top: 4%;
+  left: 5%;
+  background-color: #20AFFF;
+  z-index: 5;
+}
+
+.project-content {
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  transform: scale3d(0.5, 0.5, 0.5);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.project-heading, .project-title, .project-details, .project-description {
+  text-align: left;
+}
+
+
+
+
+
+
+
+
+
+
+/* -------------- ABOUT ME -------------- */
+.about-me-container {
+  height: 150vh;
   width: 100vw;
-  display: grid;
-  grid-template-areas: "contact info";
-  align-items: flex-end;
-  justify-content: space-between;
+/*   margin-top: 50vh; */
+/*   margin-bottom: 70vh; */
+  padding: 1em;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  background-color: white;
+  position: relative;
+/*   border-radius: 0 0 15px 15px; */
 }
 
-.contact-me {
-  transition: 0.5s;
-  grid-area: contact;
-  background-color: black;
-  border: 2px solid white;
+.background-border {
+  position: relative;
+  border: 1px solid #aed8e9;
+}
+
+.background-border-reveal {
+  position: absolute;
+  top: -10%;
+  left: -2%;
+  height: 150%;
+  width: 104%;
+  background-color: white;
+/*   background-color: red; */
+  transition: 3s;
+  transition-timing-function: ease-out;
+  clip-path: polygon(50% 10%, 100% 0, 100% 100%, 0 100%, 0 0);
+  transform-origin: bottom;
+}
+
+.about-me-label {
+/*   background-color: white; */
+  margin-top: -2vh;
+  margin-bottom: 2vh;
+  z-index: 6;
+  position: relative;
+  font-weight: inherit;
+}
+
+.about-me-label:before {
+  content: '';
+  position: absolute;
+  background-color: white;
+  top: 0;
+  left: 25%;
+  height: 100%;
+  width: 50%;
+  z-index: -1;
+}
+
+.about-me-content {
+  position: relative;
+  z-index: 5;
+  font-size: 16px;
+  line-height: 26px;
+/*   text-align: left; */
+  padding: 1em;
+}
+
+
+
+
+
+
+
+
+/* -------------- CONTACT ME --------------- */
+.contact-section {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+/*   margin-top: 100vh; */
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+}
+
+.contact-section div {
+  color: white;
+}
+
+/* .contact-me-form {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
   height: 60vh;
-  width: 50vw;
 }
 
-.information {
-  transition: 0.5s;
-  grid-area: info;
-  background-color: black;
-  border: 2px solid white;
-  height: 50vh;
-  width: 40vw;
+label {
+  text-align: left;
 }
+
+#form-message {
+  height: 40vh;
+}
+
+#form-submit {
+  width: 33%;
+  margin-left: 33%;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
