--- a/style.css
+++ b/style.css
@@ -23,10 +23,13 @@ html {
 }
 
 body {
-  height: 620vh;
-  background-color: #062d3e;
-  background-color: black;
-  background-color: #000e13;
+  height: 490vh;
+/*   background-color: #062d3e; */
+/*   background-color: black; */
+/*   background-color: #000e13; */
+/*   background-color: rgba(0, 14, 19, .9); */
+  transition: 1s;
+  background-color: #1f1f22;
   position: relative;
 }
 
@@ -49,14 +52,106 @@ main {
 
 /* --------------- HEADER --------------- */
 .landing-page {
-  height: 155vh;
+  height: 125vh;
   position: relative;
-  background-color: #062d3e;
-  background-color: white;
+/*   background-color: #062d3e; */
+/*   background-color: white; */
   z-index: 12;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  perspective: 3000px;
 }
+
+/* .landing-page:after {
+  content: '';
+  position: absolute;
+  top: 3vh;
+  left: 2.5vw;
+  height: 95vh;
+  width: 95vw;
+  border: 1px solid orangered;
+} */
+
+/* .landing-page:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -4vw;
+  height: 94vh;
+  width: 100vw;
+  border: 3vh solid white;
+}
+ */
+.landing-page-bg {
+  position: absolute;
+  background-color: white;
+  height: 100vh;
+  width: 100vw;
+  transform-origin: bottom;
+/*   z-index: 12; */
+/*   transform: scale3d(0.6, 0.8, 1); */
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+/*   opacity: 0.8; */
+/*   transform: translate; */
+}
+
+.landing-page-bg:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50vh;
+  width: 70vw;
+  background-color: rgba(0, 200, 255, 1);
+/*   transform: skewX(70deg); */
+  transform: translate3d(20%, 50%, 0);
+  mix-blend-mode: hue;
+}
+
+.landing-page-bg:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30vh;
+  width: 40vw;
+  background-color: rgba(0, 255, 200, 1);
+  transform: translate3d(70%, 120%, 0);
+  mix-blend-mode: hue;
+}
+
+.landing-page-bg-title {
+  position: absolute;
+  top: 0;
+  left: -5vw;
+  padding-right: 10vw;
+/*   height: 9.5vh; */
+  width: 110vw;
+  padding-top: 102.5vh;
+  padding-bottom: 2.5vh;
+  text-align: right;
+  color: orangered;
+  border: 1px solid orangered;
+  font-size: 1.3em;
+  z-index: -1;
+  background-color: #1f1f22;
+}
+
+.landing-page-bg-border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  border: 3vh solid white;
+/*   box-shadow: inset 0px -100px 0px 100px #19252a; */
+  transform-origin: right;
+/*   transform: rotate3d(0, 1, 0, -20deg); */
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+}
+
 
 .home-page-header {
   position: absolute;
@@ -70,8 +165,8 @@ main {
 
 .landing-name-holder {
   position: fixed;
-  top: 20vh;
-  left: 5vw;
+  top: 10vh;
+  left: 3vw;
   height: 30vh;
   width: 30vw;
   z-index: 9;
@@ -117,10 +212,10 @@ main {
 
 .primary .letter {
   color: white;
-  color: #062d3e;
+/*   color: #062d3e; */
 /*   color: #7f8689; */
   z-index: 8;
-/*   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3); */
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .secondary .letter {
@@ -130,29 +225,39 @@ main {
 
 .landing-title {
   position: fixed;
-  top: 64vh;
-  right: 0vw;
-  padding-right: 4vw;
+  top: 47vh;
+  right: -5vw;
+/*   padding-right: 4vw; */
   z-index: 10;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+/*   mix-blend-mode: exclusion; */
+/*   mix-blend-mode: darken; */
+  
 }
 
 .landing-title div {
   font-size: 10em;
   margin: 0;
 /*   line-height: 1.5; */
-  line-height: 1.35;
+/*   line-height: 1.35; */
+  line-height: 0.8;
   font-family: 'Lora', serif; 
-  transform: scale3d(1, 1.8, 1);
+  transform: scale3d(0.6, 1, 1);
   text-align: right;
-/*   text-shadow: -2px -2px 3px rgba(0, 0, 0, 0.1); */
-/*   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1), -2px -2px 3px rgba(255, 255, 255, 1); */
+/*   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3); */
+  text-shadow: -2px -2px 3px rgba(0, 0, 0, 0.3);
+/*   text-shadow: 2px 2px 0px rgba(255, 255, 255, 1), -2px -2px 0px rgba(255, 255, 255, 1); */
   background-clip: text;
-  color: #dccca4;
-  color: #000e13;
-
-  
+/*   mix-blend-mode: exclusion; */
+/*   color: #dccca4; */
+/*   color: #000e13; */
+/*   color: rgba(230, 230, 230, 1); */
+/*   color: #062d3e; */
+  color: white; 
+/*   opacity: 0.5; */
+/*   color: #062d3e; */
+/*   color: black; */
 }
 
 .scroll-down {
@@ -194,13 +299,14 @@ main {
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-start;
   transition: 0.5s;
+  mix-blend-mode: difference;
 }
 
 .nav-buttons {
-  width: 40%;
+/*   width: 60%; */
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -209,20 +315,25 @@ main {
 }
 
 .nav-button {
-  height: 5vh;
+  height: 3vh;
   width: 10vw;
   border: none;
+  background-color: #b99948;
   background-color: transparent;
   position: relative;
   color: white;
-  color: #062d3e;
+  transition: 0.2s;
+/*   color: #062d3e; */
 }
 
 .nav-button:hover {
   cursor: pointer;
+  background-color: white;
+  color: #b99948;
+  color: black;
 }
 
-.nav-button:before {
+/* .nav-button:before {
   content: '';
   position: absolute;
   z-index: -1;
@@ -242,7 +353,7 @@ main {
   transform-origin: right;
   background-color: #a9ddff;
   transform: scale3d(1, 1, 1);
-}
+} */
 
 .toggleMe .nav-buttons {
   transform: translate3d(0, 0%, 0);
@@ -263,16 +374,18 @@ main {
 /* ------------- PROJECTS HEADER ------------- */
 .projects-header {
   position: relative;
-  top: -135%;
-  left: 5px;
+  top: 0%;
+  left: 5%;
   z-index: 13;
   height: 15vh;
-  width: 98vw;
+  width: 30%;
   pointer-events: none;
   white-space: nowrap;
   overflow: hidden;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+/*   background-color: #303b40; */
+  opacity: 0;
 }
 
 .ph-bg {
@@ -281,13 +394,14 @@ main {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(to right, #000e13, transparent, #000e13);
+/*   background-image: linear-gradient(to right, #303b40, transparent, #303b40); */
   transition: 0.5s;
 }
 
 .ph-text1, .ph-text2 {
   color: white;
   color: rgba(255, 255, 255, 0.5);
+/*   color: orangered; */
   position: absolute;
   left: 0;
   display: inline-block;
@@ -319,6 +433,22 @@ main {
 
 
 
+.projects-header1 {
+  position: absolute;
+  top: 100vh;
+  left: 3vw;
+  height: 5vh;
+  line-height: 5vh;
+  width: 10vw;
+  color: orangered;
+  font-size: 1.3em;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  z-index: 15;
+}
+
+
+
 
 
 
@@ -329,24 +459,116 @@ main {
 
 /* ------------- PROJECTS --------------- */
 .projects-container {
-  height: 220vh;
-  width: 99.5%;
+  height: 150vh;
+  width: 100%;
   position: relative;
-  padding-top: 50vh;
+/*   padding-top: 20vh; */
   padding-bottom: 5vh;
-  margin-top: -20vh;
-  background-color: white;
-  background-color: black;
-  background-color: #000e13;
+/*   margin-top: -20vh; */
+/*   background-color: white; */
+/*   background-color: black; */
+/*   background-color: #000e13; */
+/*   background-color: rgba(0, 14, 19, .9); */
+/*   background-color: transparent; */
+/*   background-color: #002939; */
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
-  z-index: 12;
+  z-index: 11;
 /*   border: 5px solid; */
 /*   border-right: 10px solid; */
 /*   border-image: linear-gradient(white, #000e13, #000e13) 0 1 0 1; */
 /*   border-radius: 80px 80px 0px 0px; */
 /*   border-radius: 55px; */
+}
+
+.projects-border-bg {
+  position: absolute;
+  top: -40%;
+  left: 3vw;
+  height: 140%;
+  width: 100%;
+/*   width: 90%; */
+  border: 1px solid orangered;
+  border-right: none;
+/*   background-color: transparent; */
+  background-color: #1f1f22;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+}
+
+.border-left-reveal {
+  position: absolute;
+  bottom: 0;
+  left: -1px;
+  height: 100%;
+  width: 3px;
+  background: linear-gradient(to bottom, transparent, #1f1f22, #1f1f22, #1f1f22);
+  transform-origin: bottom;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+}
+
+.border-bottom-reveal {
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  height: 6px;
+  width: 100%;
+  background: linear-gradient(to left, transparent, #1f1f22, #1f1f22, #1f1f22);
+  transform-origin: left;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+}
+
+
+/* .projects-border-bg:after {
+  content: '';
+  position: absolute;
+  top: -23.6%;
+  left: 50%;
+  height: 52vh;
+  width: 50%;
+  border-right: 1px solid orangered;
+} */
+
+/* .projects-border-bg:after {
+  content: '2. Projects';
+  position: absolute;
+  top: 25%;
+  left: -15%;
+  height: 52vh;
+  width: 50%;
+  color: orangered;
+  font-size: 1.5em;
+} */
+
+.projects-bg {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  height: 100%;
+  width: 40%;
+  transform-origin: top;
+  background-color: #002939;
+  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #363639;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  display: none;
+}
+
+.projects-bg-reveal {
+  position: absolute;
+  top: 15%;
+  left: 10%;
+  height: 100%;
+  width: 80%;
+  background-color: green;
+  z-index: 16;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  display: none;
 }
 
 .projects-container * {
@@ -356,34 +578,53 @@ main {
 .project-one-container, .project-two-container, .project-three-container {
   position: relative;
   top: 0%;
-  left: 5%;
+  left: 15%;
   border-radius: 15px;
   transition: 0.5s;
   height: 30vh;
-  width: 70vw;
-  margin-bottom: 10vh;
+  width: 75vw;
+/*   margin-bottom: 10vh; */
   z-index: 5;
   display: grid;
-  grid-template-areas: "title thumbnail" "description thumbnail" "description technologies";
+/*   grid-template-areas: "title thumbnail" "description thumbnail" "description technologies"; */
+  grid-template-areas: "thumbnail title" "thumbnail technologies" "thumbnail description";
+  background-color: rgba(255, 255, 255, 0.2);
+/*   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
 }
 
 
 
 .project-thumbnail {
   height: 30vh;
-  width: 40vw;
+  width: 30vw;
   position: relative;
-  margin-left: 10vw;
+/*   margin-top: -10vh; */
+/*   margin-left: 2vw; */
+  margin-right: 5vw;
+  margin-bottom: 10vh;
   background-color: white;
-  z-index: 5;
+  z-index: -1;
   background-repeat: no-repeat;
   background-size: cover;
   grid-area: thumbnail;
+  border-radius: 15px 0px 0px 15px;
+/*   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); */
+}
+
+.project-thumbnail:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -50%;
+  height: 100%;
+  width: 50%;
+  background: linear-gradient(to right, transparent, #4c4c4e);
+  pointer-events: none;
 }
 
 .thumbnail-image {
   height: 30vh;
-  width: 40vw;
+  width: 45vw;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -392,11 +633,13 @@ main {
   pointer-events: none;
   position: relative;
   transition: 0.5s;
+  border-radius: 15px 0px 0px 15px;
+  
 }
 
 .expand .thumbnail-image img {
-  filter: blur(5px);
-  scale: 1.05;
+/*   filter: blur(5px); */
+  scale: 0.95;
 }
 
 .collapse .thumbnail-image {
@@ -405,18 +648,17 @@ main {
 
 .thumbnail-image img {
   width: 120%;
-  margin-left: -10%;
+  margin-left: -5%;
   background-repeat: repeat-y;
   background-position: center;
   background-size: cover;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  
 }
 
 .project-buttons-container {
   height: 30vh;
-  width: 40vw;
+  width: 30vw;
   position: absolute;
   z-index: 15;
   display: flex;
@@ -480,10 +722,13 @@ main {
   font-weight: lighter;
     white-space: nowrap;
   grid-area: title;
-  height: 20vh;
-  line-height: 20vh;
-  opacity: 0;
+  height: 10vh;
+  width: 35vw;
+  line-height: 15vh;
+/*   color: black; */
+/*   opacity: 0; */
   transition: 1s;
+/*   text-shadow: 0 0 15px rgba(0, 0, 0, 1); */
 }
 
 .project-details {
@@ -499,19 +744,22 @@ main {
   line-height: 1.7;
   grid-area: description;
   height: 20vh;
-  width: 40vw;
+  width: 35vw;
   padding-left: 5%;
   padding-right: 5%;
-  opacity: 0;
+/*   opacity: 0; */
   transition: 1s;
   transition-delay: 0.5s;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.7);
+/*   color: black; */
 }
 
 .project-technologies {
-  height: 8vh;
-  width: 40vw;
-  margin-left: 10vw;
+  height: 5vh;
+  width: 35vw;
+  line-height: 6vh;
+/*   padding-top: 2vh; */
+/*   margin-left: 2.5vw; */
 }
 
 .tech-icon {
@@ -525,7 +773,8 @@ main {
 }
 
 .html5fill {
-  fill: #000e13;
+  fill: #1f1f22;
+/*   fill: white; */
 }
 
 
@@ -543,31 +792,61 @@ main {
   height: 150vh;
   width: 100%;
   position: absolute;
-  top: 255vh;
+  top: 210vh;
   transition: 0.2s;
-  z-index: 9;
+  z-index: 12;
   transition: 0.5s;
-  background-color: white;
+/*   background-color: white; */
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 }
 
 .about-me-label {
   height: 30vh;
   line-height: 30vh;
-  margin-left: 26vw;
-  width: 60vw;
+  margin-left: 25vw;
+/*   width: 20vw; */
   text-align: left;
-  z-index: 6;
+  z-index: 12;
   color: white;
-  color: #333333;
+/*   color: #333333; */
   font-size: 3em;
   position: absolute;
-  top: 60vh;
+  top: 30vh;
   font-weight: lighter;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 }
 
+.about-me-label-border {
+  position: absolute;
+  top: 47vh;
+  left: 42vw;
+  height: 15vh;
+  width: 15vw;
+  background-color: #1f1f22;
+  border-radius: 500px;
+  border: 2px solid red;
+  z-index: -2;
+  display: none;
+}
+
+.about-me-label-reveal {
+  position: absolute;
+  top: 40vh;
+  left: 41vw;
+  height: 30vh;
+  width: 30vh;
+  background-color: #1f1f22;
+/*   background-color: green; */
+  border-radius: 500px;
+/*   border: 6px solid #1f1f22; */
+  z-index: -1;
+/*   transform: translate3d(0, 100%, 0); */
+/*! transform: translate3d(0, 0%, 0); */
+  transition: 5s;
+  transition-timing-function: ease;
+  display: none;
+}
 
 
 
@@ -578,13 +857,21 @@ main {
 
 /* -------------- ABOUT ME -------------- */
 .about-me-container {
-  height: 150vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   position: relative;
-  z-index: 9;
+  z-index: 10;
+}
+
+.am-background {
+  z-index: -1;
+  height: 250vh;
+  position: absolute;
+  top: 0vh;
+  display: none;
 }
 
 .about-me-body {
@@ -592,17 +879,17 @@ main {
 /*   height: 30vh; */
   width: 60vw;
 /*   width: 100vw; */
-  top: -10%;
+  top: -20%;
 /*   right: 10%; */
   left: 20vw;
   position: absolute;
   z-index: 5;
-  background-color: white;
-  border-radius: 100px;
+/*   background-color: white; */
+/*   border-radius: 100px; */
 /*   background-color: #000e13; */
 /*   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25); */
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 }
@@ -625,39 +912,62 @@ main {
 
 .am-sentence {
   text-align: left;
-}
-
-.background-fade-left {
-  position: absolute;
-  top: 60vh;
-  height: 60vh;
-  width: 100vw;
-/*   background-color: red; */
-  background-image: linear-gradient(to top right, white, white, transparent);
-  z-index: 12;
-    transition: 1s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-}
-
-.background-fade-right {
-  position: absolute;
-  top: 60vh;
-  height: 60vh;
-  width: 100vw;
-/*   background-color: red; */
-  background-image: linear-gradient(to bottom left, white, white, transparent);
-  z-index: 12;
-    transition: 1s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  color: white;
 }
 
 .about-me-trigger {
-  position: absolute;
-  bottom: 145vh;
-  height: 5vh;
+  position: fixed;
+  bottom: 180vh;
+  height: 75vh;
   width: 100vw;
-/*   background-color: red; */
+/*   background-color: rgba(255, 0, 0, 0.2); */
+  pointer-events: none;
 }
+
+
+
+
+
+
+
+
+
+/* ------------ ABOUT ME BACKGROUND ------------- */
+.about-me-reveal-plates {
+  position: fixed;
+  height: 200vh;
+  width: 100vw;
+/*   z-index: 10; */
+/*   background-color: orange; */
+}
+
+.am-plate {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.plate1 {
+  background-color: #198051;
+}
+
+.plate2 {
+  background-color: #00d876;
+}
+
+.plate3 {
+  background-color: #0a7fd1;
+}
+
+.plate4 {
+  background-color: #0a93f4;
+}
+
+
+
+
+
+
 
 
 
@@ -673,40 +983,45 @@ main {
   z-index: 11;
   display: flex;
   align-items: flex-end;
-  background-color: white;
+/*   background-color: white; */
   transition: 0.5s;
 }
 
 .background-gradient {
   position: absolute;
-  bottom: 0;
-  height: 300vh;
-  width: 100vw;
-  z-index: -1;
-  transition: 0.75s;
-  pointer-events: none;
-}
-
-.background-gradient:before {
-  content: '';
-  position: absolute;
   bottom: 10vh;
   left: 10vw;
   height: 70vh;
   width: 80vw;
-  border: 2px dotted rgba(255, 255, 255, 0.3);
+  z-index: -1;
+  transition: 0.75s;
+  pointer-events: none;
+/*   border: 2px dotted rgba(255, 255, 255, 0.3); */
+  border: 2px dotted transparent;
+/*   opacity: 0; */
 }
 
 .background-gradient:after {
   content: '';
   position: absolute;
-  bottom: 55vh;
-  left: 20vw;
+  bottom: 45vh;
+  left: 10vw;
   height: 0vh;
   width: 60vw;
-  border-top: 2px dotted rgba(255, 255, 255, 0.3);
+  transition: 0.75s;
+/*   border-top: 2px dotted rgba(255, 255, 255, 0.3); */
+  border-top: 2px dotted transparent;
   transform: translate3d(0, 0, 200px);
 }
+
+.at-bottom .background-gradient {
+  border: 2px dotted rgba(255, 255, 255, 0.3);
+}
+
+.at-bottom .background-gradient:after {
+  border-top: 2px dotted rgba(255, 255, 255, 0.3);
+}
+
 
 .lets-talk-container {
   position: fixed;
@@ -769,7 +1084,7 @@ main {
   opacity: 0;
 }
 
-.at-bottom .contact-card-inner, .at-bottom .lets-talk-container{
+.at-bottom .contact-card-inner, .at-bottom .lets-talk-container {
   opacity: 1;
 }
 
